Titel en beschrijving

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Lotte Rombaut - HTML5 Boilerplate</title>
+        <meta name="description" content="Dit is mijn HTML boilerplate">
     </head>
     <body>
         <header>
