--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Lotte Rombaut - HTML5 Boilerplate</title>
         <meta name="description" content="Dit is mijn HTML boilerplate">
+        <meta name="viewport"  content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
