--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Lotte Rombaut - HTML5 Boilerplate</title>
         <meta name="description" content="Dit is mijn HTML boilerplate">
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
+        <link type="img/png" rel="icon" sizes="32X32" href="favicon-32x32.png">
+        <link type="img/png" rel="icon" sizes="16X316" href="favicon-16x16.png">
     </head>
     <body>
         <header>
