Added all possible favicons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <link type="img/png" rel="icon" sizes="32X32" href="favicon-32x32.png">
         <link type="img/png" rel="icon" sizes="16X316" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="mask-icon" href="sfari-pinned-tab.svg" color="#E85E00">
     </head>
     <body>
         <header>
