--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Lotte Rombaut - HTML5 Boilerplate</title>
         <meta name="description" content="Dit is mijn HTML boilerplate">
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
+        <meta name="msapplication-TitleColor" content="#E85E00">
+        <meta name="theme-color" conten="#E85E00">
+        <link rel="apple-touch-icon" size="180x180" href="apple-touch-icon.png" 
         <link type="img/png" rel="icon" sizes="32X32" href="favicon-32x32.png">
         <link type="img/png" rel="icon" sizes="16X316" href="favicon-16x16.png">
         <link rel="manifest" href="site.webmanifest">
