--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport"  content="width=device-width, initial-scale=1.0">
         <meta name="msapplication-TitleColor" content="#E85E00">
         <meta name="theme-color" conten="#E85E00">
-        <link rel="apple-touch-icon" size="180x180" href="apple-touch-icon.png" 
+        <link rel="apple-touch-icon" size="180x180" href="apple-touch-icon.png"
         <link type="img/png" rel="icon" sizes="32X32" href="favicon-32x32.png">
         <link type="img/png" rel="icon" sizes="16X316" href="favicon-16x16.png">
         <link rel="manifest" href="site.webmanifest">
@@ -25,6 +25,10 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="test.com">standard link</a> distinctio facilis excepturi, reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis quasi sed, facere quo nobis a blanditiis.
         </p>
+        <figure>
+            <img src="yawning-cat.jpeg" alt="this is a picture of a yawning cat">
+            <figcaption>Yawning cat, picture by Martina Misar</figcaption>
+        </figure>
         <h3>
             To get you started
         </h3>
