--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="test.com">standard link</a> distinctio facilis excepturi, reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis quasi sed, facere quo nobis a blanditiis.
         </p>
         <figure>
-            <img src="yawning-cat.jpeg" alt="this is a picture of a yawning cat">
+            <img src="img/yawning-cat.jpeg" alt="this is a picture of a yawning cat">
             <figcaption>Yawning cat, picture by Martina Misar</figcaption>
         </figure>
         <h3>
